# acidcomics

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-0c3f201b7607025e780d914f8ffbd52ba0ae13c9377a36b5d7ce929152333f8c.json  query-3c30b8e623b362a5e84db89637af3bf216f5fe54f6be861d46fae1c62a88a5a0.json  query-ac95f5bdee7adbc2dd2382e0a3749d86ead0bab4da61def448e257936a89cc0b.json  query-ae4904aa642762027ecbe84216b9b9f74d89bdf65786614bc8af08b92869adb6.json
migrations/: 20260211095013_init.sql
src/: auth.rs  main.rs  routes.rs
src/config/: env.rs
src/db/: mod.rs  pool.rs  smoke.rs
src/graphql/: mutation.rs  query.rs  schema.rs  types.rs
