[package]
name = "acidcomics"
version = "0.1.0"
edition = "2021"

[dependencies]

# Runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = "0.8"

# GraphQL
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-axum = "7"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

dotenvy = "0.15"
anyhow = "1"

argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
rand_core = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
